<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="home">首页</string>
    <string name="journey">日程</string>
    <string name="todo">待办</string>
    <string name="profile">我的</string>
    <string name="finished">已完成</string>
    <string name="finish">完成</string>
    <string name="homework">作业</string>
    <string name="sport">运动</string>
    <string name="health">健康</string>
    <string name="shop">购物</string>
    <string name="work">工作</string>
    <string name="ticket">买票</string>
    <string name="custom">自定义</string>
    <string name="dismiss">取消</string>
    <string name="low_priority">! 低优先级</string>
    <string name="mid_priority">!! 中优先级</string>
    <string name="high_priority">!!!高优先级</string>
    <string name="no_priority">!!!无优先级</string>
    <string name="text_check_all">全选</string>
    <string name="text_move_into_schedule">移入日程</string>
    <string name="text_finish">完成</string>
</resources>