<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:padding="10dp">

    <TextView
        android:id="@+id/priority_low"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:text="@string/low_priority"
        android:textColor="@color/colorLowPriority"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/priority_mid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:text="@string/mid_priority"
        android:textColor="@color/colorMidPriority"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/priority_high"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:text="@string/high_priority"
        android:textColor="@color/colorHighPriority"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/priority_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:text="@string/no_priority"
        android:textColor="@color/colorNoPriority"
        android:textSize="18sp" />
</LinearLayout>