<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="com.muxixyz.ccnubox.main.ui.todo.TodoPopupViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#8C8DFE">

            <TextView
                android:id="@+id/todo_popup_finish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginVertical="5dp"
                android:layout_marginEnd="10dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/finish"
                android:textColor="@android:color/white" />
        </RelativeLayout>

        <EditText
            android:id="@+id/todo_popup_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/bg_todo_popup"
            android:text="@={viewmodel.title}"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/todo_add_date_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="3dp"
                android:src="@drawable/ic_todo_date" />

            <ImageView
                android:id="@+id/todo_add_time_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="3dp"
                android:src="@drawable/ic_todo_time" />

            <ImageView
                android:id="@+id/todo_add_priority_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="3dp"
                android:src="@drawable/ic_todo_priority" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="3dp"
                android:clickable="true"
                android:onClick="@{()->viewmodel.showTags()}"
                android:src="@drawable/ic_todo_tag" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#dddfe8" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/todo_tags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:goneUnless="@{viewmodel.tagsVisibility}">

            <ImageView
                android:id="@+id/todo_tag_homework"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:onClick="@{() -> viewmodel.onTagClick(viewmodel.TAG_HOMEWORK)}"
                android:src="@drawable/ic_tag_homework"
                app:goneUnless="@{viewmodel.tagsVisibility}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/todo_tag_sport"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/todo_tag_sport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewmodel.onTagClick(viewmodel.TAG_SPORT)}"
                android:src="@drawable/ic_tag_sport"
                app:layout_constraintBottom_toBottomOf="@id/todo_tag_homework"
                app:layout_constraintLeft_toRightOf="@id/todo_tag_homework"
                app:layout_constraintRight_toLeftOf="@id/todo_tag_health"
                app:layout_constraintTop_toTopOf="@id/todo_tag_homework" />

            <ImageView
                android:id="@+id/todo_tag_health"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewmodel.onTagClick(viewmodel.TAG_HEALTH)}"
                android:src="@drawable/ic_tag_health"
                app:layout_constraintBottom_toBottomOf="@id/todo_tag_homework"
                app:layout_constraintLeft_toRightOf="@id/todo_tag_sport"
                app:layout_constraintRight_toLeftOf="@id/todo_tag_shop"
                app:layout_constraintTop_toTopOf="@id/todo_tag_homework" />

            <ImageView
                android:id="@+id/todo_tag_shop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewmodel.onTagClick(viewmodel.TAG_SHOP)}"
                android:src="@drawable/ic_tag_shop"
                app:layout_constraintBottom_toBottomOf="@id/todo_tag_homework"
                app:layout_constraintLeft_toRightOf="@id/todo_tag_health"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/todo_tag_homework" />

            <TextView
                android:id="@+id/todo_text_homework"
                style="@style/todo_tag_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewmodel.onTagClick(viewmodel.TAG_HOMEWORK)}"
                android:text="@string/homework"
                app:layout_constraintBottom_toTopOf="@id/todo_tag_work"
                app:layout_constraintLeft_toLeftOf="@id/todo_tag_homework"
                app:layout_constraintRight_toRightOf="@id/todo_tag_homework"
                app:layout_constraintTop_toBottomOf="@id/todo_tag_homework" />

            <TextView
                android:id="@+id/todo_text_sport"
                style="@style/todo_tag_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewmodel.onTagClick(viewmodel.TAG_SPORT)}"
                android:text="@string/sport"
                app:layout_constraintBottom_toTopOf="@id/todo_tag_ticket"
                app:layout_constraintLeft_toLeftOf="@id/todo_tag_sport"
                app:layout_constraintRight_toRightOf="@id/todo_tag_sport"
                app:layout_constraintTop_toBottomOf="@id/todo_tag_sport" />

            <TextView
                android:id="@+id/todo_text_health"
                style="@style/todo_tag_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewmodel.onTagClick(viewmodel.TAG_HEALTH)}"
                android:text="@string/health"
                app:layout_constraintBottom_toTopOf="@id/todo_tag_custom"
                app:layout_constraintLeft_toLeftOf="@id/todo_tag_health"
                app:layout_constraintRight_toRightOf="@id/todo_tag_health"
                app:layout_constraintTop_toBottomOf="@id/todo_tag_health" />

            <TextView
                android:id="@+id/todo_text_shop"
                style="@style/todo_tag_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewmodel.onTagClick(viewmodel.TAG_SHOP)}"
                android:text="@string/shop"
                app:layout_constraintLeft_toLeftOf="@id/todo_tag_shop"
                app:layout_constraintRight_toRightOf="@id/todo_tag_shop"
                app:layout_constraintTop_toBottomOf="@id/todo_tag_shop" />

            <ImageView
                android:id="@+id/todo_tag_work"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:onClick="@{() -> viewmodel.onTagClick(viewmodel.TAG_WORK)}"
                android:src="@drawable/ic_tag_work"
                app:layout_constraintLeft_toLeftOf="@id/todo_tag_homework"
                app:layout_constraintRight_toRightOf="@id/todo_tag_homework"
                app:layout_constraintTop_toBottomOf="@id/todo_text_homework" />

            <ImageView
                android:id="@+id/todo_tag_ticket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:onClick="@{() -> viewmodel.onTagClick(viewmodel.TAG_TICKET)}"
                android:src="@drawable/ic_tag_ticket"
                app:layout_constraintLeft_toLeftOf="@id/todo_tag_sport"
                app:layout_constraintRight_toRightOf="@id/todo_tag_sport"
                app:layout_constraintTop_toBottomOf="@id/todo_text_sport" />

            <ImageView
                android:id="@+id/todo_tag_custom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:onClick="@{() -> viewmodel.onTagClick(viewmodel.TAG_CUSTOM)}"
                android:src="@drawable/ic_tag_custom"
                app:layout_constraintLeft_toLeftOf="@id/todo_tag_health"
                app:layout_constraintRight_toRightOf="@id/todo_tag_health"
                app:layout_constraintTop_toBottomOf="@id/todo_text_health" />

            <TextView
                android:id="@+id/todo_text_work"
                style="@style/todo_tag_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewmodel.onTagClick(viewmodel.TAG_WORK)}"
                android:text="@string/work"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="@id/todo_tag_work"
                app:layout_constraintRight_toRightOf="@id/todo_tag_work"
                app:layout_constraintTop_toBottomOf="@id/todo_tag_work" />

            <TextView
                android:id="@+id/todo_text_ticket"
                style="@style/todo_tag_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewmodel.onTagClick(viewmodel.TAG_TICKET)}"
                android:text="@string/ticket"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="@id/todo_tag_ticket"
                app:layout_constraintRight_toRightOf="@id/todo_tag_ticket"
                app:layout_constraintTop_toBottomOf="@id/todo_tag_ticket" />

            <TextView
                android:id="@+id/todo_text_custom"
                style="@style/todo_tag_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewmodel.onTagClick(viewmodel.TAG_CUSTOM)}"
                android:text="@string/custom"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="@id/todo_tag_custom"
                app:layout_constraintRight_toRightOf="@id/todo_tag_custom"
                app:layout_constraintTop_toBottomOf="@id/todo_tag_custom" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</layout>